--- a/Seaborn_test_github_1.ipynb
+++ b/Seaborn_test_github_1.ipynb
@@ -30,7 +30,9 @@
       "source": [
         "### Seaborn\n",
         "\n",
-        "Python visualization library"
+        "Python visualization library\n",
+        "\n",
+        "https://elitedatascience.com/python-seaborn-tutorial#step-1"
       ],
       "metadata": {
         "id": "Oddud14LnY0w"
