--- a/Seaborn_test_github_1.ipynb
+++ b/Seaborn_test_github_1.ipynb
@@ -32,11 +32,37 @@
         "\n",
         "Python visualization library\n",
         "\n",
+        "The Ultimate Python Seaborn Tutorial: Gotta Catch 'Em All\n",
+        "\n",
         "https://elitedatascience.com/python-seaborn-tutorial"
       ],
       "metadata": {
         "id": "Oddud14LnY0w"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pandas for managing datasets\n",
+        "import pandas as pd"
+      ],
+      "metadata": {
+        "id": "w7aSefoc1m-_"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Matplotlib for additional customization\n",
+        "from matplotlib import pyplot as plt"
+      ],
+      "metadata": {
+        "id": "ZgrALDQu1z77"
+      },
+      "execution_count": 5,
+      "outputs": []
     }
   ]
 }
