--- a/Seaborn_test_github_1.ipynb
+++ b/Seaborn_test_github_1.ipynb
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "w7aSefoc1m-_"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -61,7 +61,19 @@
       "metadata": {
         "id": "ZgrALDQu1z77"
       },
-      "execution_count": 5,
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Seaborn for plotting and styling\n",
+        "import seaborn as sns"
+      ],
+      "metadata": {
+        "id": "CQlkfm3b2FT4"
+      },
+      "execution_count": 8,
       "outputs": []
     }
   ]
