--- a/Seaborn_test_github_1.ipynb
+++ b/Seaborn_test_github_1.ipynb
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "w7aSefoc1m-_"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "ZgrALDQu1z77"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -73,7 +73,19 @@
       "metadata": {
         "id": "CQlkfm3b2FT4"
       },
-      "execution_count": 8,
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Read dataset\n",
+        "df = pd.read_csv('Pokemon.csv', index_col=0, encoding='latin')"
+      ],
+      "metadata": {
+        "id": "Vj3bXi443pTS"
+      },
+      "execution_count": 12,
       "outputs": []
     }
   ]
